--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.2.1",
     "framer-motion": "^11.16.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.475.0",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
     "react": "^19.0.0",
