adjust dashboard and blog

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,10 +36,10 @@
     "src/app/events/page.jsx",
     "src/app/components/Header.jsx",
     "src/app/components/Footer.jsx",
-    "src/app/social/components/ChatMessage.jsx",
+    "src/app/pages/social/components/ChatMessage.jsx",
     "src/app/components/ChatInterface.jsx",
-    "src/app/blog/page.jsx",
-    "src/app/social/page.jsx"
+    "src/app/pages/blog/page.jsx",
+    "src/app/pages/social/page.jsx"
   ],
   "exclude": ["node_modules"] // Exclude dependencies
 }
