--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "express-validator": "^7.2.1",
     "framer-motion": "^11.16.4",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
