--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.9.4",
-    "next": "15.1.4",
+    "next": "^15.3.3",
+    "openai": "^5.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
